# tplink-router-observer

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
router_stats_collector/: __init__.py  collector.py  config.py  datastore.py  main.py
tests/: __init__.py  test_collector.py  test_config.py  test_datastore.py
